Adiciona conexão com o banco e faz a criação de migrations, entidades e a adição do tsyring, bibloteca de instancias
