# src/routes/categories.routes.ts
@@ -2,9 +2,9 @@
 import { Router } from "express";
 import multer from "multer";
 
-import { createCategoryController } from "../modules/cars/useCases/createCategory";
-import { importCategoriesController } from "../modules/cars/useCases/importCategories";
-import { listCategoriesController } from "../modules/cars/useCases/listCategories";
+import { CreateCategoryController } from "../modules/cars/useCases/createCategory/CreateCategoryController";
+import { ImportCategoriesController } from "../modules/cars/useCases/importCategories/ImportCategoriesController";
+import { ListCategoriesController } from "../modules/cars/useCases/listCategories/ListCategoriesController";
 
 //  Instacio as rotas.
 const categoriesRoutes = Router();
@@ -12,17 +12,16 @@ const categoriesRoutes = Router();
 const upload = multer({
     dest: "./tmp",
 });
-//  Crio a rota
-categoriesRoutes.post("/", (request, response) => {
-    return createCategoryController.handle(request, response);
-});
 
-categoriesRoutes.get("/", (request, response) => {
-    return listCategoriesController.handle(request, response);
-});
+const createCategoryController = new CreateCategoryController();
+const importCategoryController = new ImportCategoriesController();
+const listCategoriesController = new ListCategoriesController();
 
-categoriesRoutes.post("/import", upload.single("file"), (request, response) => {
-    return importCategoriesController.handle(request, response);
-});
+//  Crio a rota.
+categoriesRoutes.post("/", createCategoryController.handle);
+
+categoriesRoutes.get("/", listCategoriesController.handle);
+
+categoriesRoutes.post("/import", upload.single("file"), importCategoryController.handle);
 
 export { categoriesRoutes };
