# src/routes/specification.routes.ts
@@ -1,11 +1,10 @@
 import { Router } from "express";
 
-import { createSpecificationController } from "../modules/cars/useCases/createSpecification";
+import { CreateSpecificationController } from "../modules/cars/useCases/createSpecification/CreateSpecificationController";
 
 const specificationRoutes = Router();
+const createSpecificationController = new CreateSpecificationController();
 
-specificationRoutes.post("/", (request, response) => {
-    createSpecificationController.handle(request, response);
-});
+specificationRoutes.post("/", createSpecificationController.handle);
 
 export { specificationRoutes };
